# __aguada__

./: .env.example  .gitignore  00_LEIA_PRIMEIRO.txt  BACKEND_INTEGRATION_GUIDE.md  CHANGES.md  CONCLUSAO_PROJETO.md  DEBUG_FRONTEND.md  DEPLOYMENT.md  DIAGNOSTICO.md  FIRMWARE_QUICKSTART.md  FIRMWARE_README.md  FRONTEND_INTEGRATION.md  INICIO_RAPIDO.md  INSTALL.md  LEIA_PRIMEIRO.md  LICENSE  MCP_SERVERS.md  PACKAGE_TRANSFER_GUIDE.md  QUICKSTART.md  README.md  README_COMPLETO.md  REAL_DATA_GUIDE.md  REGISTER_SENSOR.sql  RELATORIO_DUPLICACOES_ARQUIVOS.md  RELATORIO_LIMPEZA.md  REORGANIZACAO_RESUMO.md  REVISAO_CONCLUIDA.txt  SUMMARY.sh  SYSTEM_STATUS.md  VERIFY.sh  aguada-v2.1.0-20251205_201922.tar.gz.sha256  backend_current  check-system.sh  create-package.sh  deploy-automatic.sh  docker-compose.yml  firmware_current  frontend_current  init.php  reff  (+7 more)
.cursor/: mcp.json
.github/: copilot-instructions.md
.old_firmware/: SENSOR_GATEWAY_FLOW.md  firmware_nodeOTA.md
.snapshots/: snapshot-2025-11-20T12_31_32_733Z.md  snapshot-2025-11-20T14_23_19_105Z.md  snapshot-2025-12-05T18_36_44_772Z.md  snapshot-aguada-completo.md
___DELETE___/: README.md
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  server-test-realdata.js
config/: network_topology.json  reservoirs.json  sensors.json
database/: init.sql  schema.sql  seed-data.sql  setup-elementos.sql
docker/: Dockerfile.backend  docker-compose.yml  nginx.conf
docs/: CHANGELOG.md  (+9 more)
firmware/node_sensor_v2/components/aguada_protocol/: CMakeLists.txt  aguada_protocol.c  aguada_protocol.h
(+242 files in other folders)
